// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage s3 checkContentType when type is jpeg 1`] = `
Array [
  Array [
    Object {
      "Key": "uploader/XYZ",
      "method": "headObject",
    },
  ],
]
`;

exports[`storage s3 checkContentType when type is png 1`] = `
Array [
  Array [
    Object {
      "Key": "uploader/XYZ",
      "method": "headObject",
    },
  ],
]
`;

exports[`storage s3 confirm successfully confirmed 1`] = `
Array [
  Array [
    Object {
      "CopySource": "graphql-tower/uploader/XYZ",
      "Key": "media/IMAGE_UPLOAD_UUID",
      "method": "copyObject",
    },
  ],
  Array [
    Object {
      "Body": "IMAGE_STREAM_BODY",
      "Key": "media/IMAGE_UPLOAD_UUID_cover",
      "method": "upload",
    },
  ],
]
`;

exports[`storage s3 confirm successfully confirmed 2`] = `
Array [
  Array [
    Object {
      "Key": "media/IMAGE_UPLOAD_UUID",
      "method": "getObject",
    },
  ],
]
`;

exports[`storage s3 confirm successfully confirmed when use unique 1`] = `
Array [
  Array [
    Object {
      "CopySource": "graphql-tower/uploader/XYZ",
      "Key": "media/UNIQUE_GUID",
      "method": "copyObject",
    },
  ],
  Array [
    Object {
      "Body": "IMAGE_STREAM_BODY",
      "Key": "media/UNIQUE_GUID_cover",
      "method": "upload",
    },
  ],
]
`;

exports[`storage s3 confirm successfully confirmed when use unique 2`] = `
Array [
  Array [
    Object {
      "Key": "media/UNIQUE_GUID",
      "method": "getObject",
    },
  ],
]
`;

exports[`storage s3 fetchCover successfully fetch 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_cover_1920x",
      "method": "headObject",
    },
  ],
  Array [
    Object {
      "Body": "IMAGE_STREAM_BODY",
      "Key": "cache/IMAGE_KEY_cover_1920x",
      "method": "upload",
    },
  ],
]
`;

exports[`storage s3 fetchCover successfully fetch 2`] = `
Array [
  Array [
    Object {
      "Key": "media/IMAGE_KEY_cover",
      "method": "getObject",
    },
  ],
]
`;

exports[`storage s3 fetchCover successfully fetch use cache 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_cover_1920x",
      "method": "headObject",
    },
  ],
]
`;

exports[`storage s3 fetchCover when input width and height 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_cover_2048x2048",
      "method": "headObject",
    },
  ],
]
`;

exports[`storage s3 fetchPreCover successfully fetch 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_precover_128x",
      "method": "headObject",
    },
  ],
  Array [
    Object {
      "Body": "IMAGE_STREAM_BODY",
      "Key": "cache/IMAGE_KEY_precover_128x",
      "method": "upload",
    },
  ],
]
`;

exports[`storage s3 fetchPreCover successfully fetch 2`] = `
Array [
  Array [
    Object {
      "Key": "media/IMAGE_KEY_cover",
      "method": "getObject",
    },
  ],
]
`;

exports[`storage s3 fetchPreCover successfully fetch use cache 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_precover_128x",
      "method": "headObject",
    },
  ],
]
`;

exports[`storage s3 fetchPreCover when input width and height 1`] = `
Array [
  Array [
    Object {
      "Key": "cache/IMAGE_KEY_precover_128x2048",
      "method": "headObject",
    },
  ],
]
`;
